# claude-task-list

./: .gitignore  CLAUDE.md  PROGRESS.md  RALPH.md  README.md  context7.json  e2e-crud.spec.ts  e2e-keyboard.spec.ts  e2e-native.spec.ts  e2e-phase3.spec.ts  e2e-phase4.spec.ts  e2e-phase5.spec.ts  e2e-round10.spec.ts  e2e-spawn-uuid.spec.ts  e2e-tooltip.spec.ts  llms.txt  package-lock.json  package.json  playwright.config.ts  start-ralph.sh  tooltip.html  vite.config.ts
.claude/: awesome-list-submission.md  ralph-round10.md  ralph-round6.md  ralph-round7.md  ralph-round8.md  ralph-round9.md  ralph-task.md  seed-content.md
.github/workflows/: release.yml
src/: App.css  App.tsx  tooltip.css  tooltip.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/plugins/tasklist/.claude-plugin/: plugin.json
src-tauri/src/: lib.rs
